# ib-trading-bots

./: .gitignore  requirements.txt
Bots/BenchmarkBot/: BenchmarkBot.py
Bots/CrossingBot/: CrossingBot.py  long-sp500.txt  production.py  settings_results.txt  simulation.py
Bots/MeanRegression/: MeanRegressionBot.py  MeanRegressionBotLive.py  no-rsi-10-all-500.txt  quick-list-base.txt  simulation.py  simulationLiveBot.py  sp500-new-exit.txt
Bots/MicroTrader/: MicroTraderOlde.py
Bots/MomentumTrader/: MomentumCrossingTrader.py  MomentumTrader.py
Bots/QuickCross/: QuickCross.py  qick-list.txt  simulation.py  sp500-30min.txt
Bots/RSIBot/: RSIBot.py
Bots/TestBot/: TestBot.py
Bots/TrendBot/: ProdTest.py  TrendBot.py  simulation.py
Bots/VolumeTrader/: VolumeTrader.py
Data/AMD_10Min_Bars/: collection.py
DataCollection/: FlatHistoryCollection.py  HistoryCollection.py  HistoryCollection_old.py
LiveCore/: CapitalManager.py  LiveIBInterface.py  LiveIndicator.py  LiveTraderBase.py  PersistentData.py  Simulator.py
Plotting/: DifferenceStudy.py  PlotUtilsOld.py  RSIBotPlot.py
Production/: LiveUpdateProduction.py  MultiProduction.py
Simulation/: FileProcessing.py  Simulator.py  SimulatorOld.py
TraderCore/: CapitalManager.py  CapitolManager.py  ConnectionInfo.py  HelperFunctions.py  IBInterface.py  IBTradingBot.py  IBapi.py  Indicators.py  TraderBase.py  TradingCosts.py  test.txt
lightning/: CMakeLists.txt  IbAPI.cpp  IbAPI.h  LightningEWrapper_prototypes.h  StdAfx.h  TestAPI.cpp  TestAPI.h  TradingCosts.cpp  TradingCosts.h  main.cpp  olde_Makefile
(+60 files in other folders)
